--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.8",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-plugin-next-on-pages": "^1.13.7",
