--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pages:build": "npx @cloudflare/next-on-pages",
     "pages:deploy": "npm run pages:build && wrangler pages deploy .vercel/output/static",
     "pages:watch": "npx @cloudflare/next-on-pages --watch",
-    "pages:dev": "npx wrangler pages dev .vercel/output/static --compatibility-flag=nodejs_compat",
+    "pages:dev": "npx wrangler pages dev .vercel/output/static",
     "db:dev": "npx prisma studio",
     "start": "next start",
     "lint": "next lint"
