--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@prisma/client": "^6.0.0",
     "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.8",
+    "js-cookie": "^3.0.5",
     "next": "15.0.3",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
