--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^6.0.0",
     "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.8",
+    "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
     "next": "15.0.3",
     "react": "19.0.0",
