--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/react-dom": "^19",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-next-on-pages": "^1.13.7",
     "postcss": "^8",
     "prisma": "^6.0.0",
