--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "@typescript-eslint/parser": "^8.22.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-import-resolver-typescript": "^3.7.0",
