--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,11 @@
     "next/typescript",
     "plugin:eslint-plugin-next-on-pages/recommended",
     "plugin:import/recommended",
-    "plugin:import/typescript"
+    "plugin:import/typescript",
+    "plugin:@typescript-eslint/recommended"
   ],
-  "plugins": ["import"],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["eslint-plugin-next-on-pages", "import", "@typescript-eslint"],
   "settings": {
     "import/resolver": {
       "typescript": {
@@ -40,6 +42,24 @@
           "caseInsensitive": true
         }
       }
-    ]
+    ],
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/no-explicit-any": "warn",
+    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "@typescript-eslint/consistent-type-imports": ["error", { "prefer": "type-imports" }],
+    "@typescript-eslint/no-non-null-assertion": "warn",
+    "react/jsx-no-useless-fragment": "warn",
+    "react/jsx-curly-brace-presence": ["warn", { "props": "never", "children": "never" }],
+    "react/self-closing-comp": "error",
+    "eqeqeq": "error",
+    "no-unused-expressions": "error",
+    "no-duplicate-imports": "error",
+    "prefer-const": "error",
+    "no-var": "error",
+    "no-return-await": "error",
+    "no-await-in-loop": "warn",
+    "no-promise-executor-return": "error",
+    "require-atomic-updates": "error"
   }
 }
