--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "pages:dev": "npx wrangler pages dev .vercel/output/static",
     "db:dev": "npx prisma studio",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix && prettier --write ."
   },
   "dependencies": {
     "@cloudflare/next-on-pages": "^1.13.6",
@@ -34,10 +35,13 @@
     "@typescript-eslint/parser": "^8.22.0",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^3.7.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-next-on-pages": "^1.13.7",
     "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
