refactor: import 사이 개행 없도록 수정

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,7 @@
             "position": "after"
           }
         ],
-        "newlines-between": "always",
+        "newlines-between": "never",
         "alphabetize": {
           "order": "asc",
           "caseInsensitive": true
