--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/adapter-d1": "^6.0.1",
     "@prisma/client": "^6.0.0",
     "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
