--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "pages:dev": "npx wrangler pages dev .vercel/output/static",
     "db:dev": "npx prisma studio",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix && prettier --write ."
+    "lint:fix": "biome check . --write --unsafe && biome format . --write"
   },
   "dependencies": {
     "@cloudflare/next-on-pages": "^1.13.6",
@@ -27,21 +26,12 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@typescript-eslint/eslint-plugin": "^8.22.0",
-    "@typescript-eslint/parser": "^8.22.0",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-next-on-pages": "^1.13.7",
     "postcss": "^8",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
