--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pages:dev": "npx wrangler pages dev .vercel/output/static",
     "db:dev": "npx prisma studio",
     "start": "next start",
-    "lint": "next lint"
+    "lint:fix": "biome check . --write --unsafe && biome format . --write"
   },
   "dependencies": {
     "@cloudflare/next-on-pages": "^1.13.6",
@@ -26,13 +26,11 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3",
-    "eslint-plugin-next-on-pages": "^1.13.7",
     "postcss": "^8",
     "prisma": "^6.0.0",
     "tailwindcss": "^3.4.1",
