--- a/package.json
+++ b/package.json
@@ -17,13 +17,20 @@
     "@cloudflare/next-on-pages": "^1.13.6",
     "@prisma/adapter-d1": "^6.0.1",
     "@prisma/client": "^6.0.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@tanstack/react-query": "^5.62.0",
     "axios": "^1.7.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "jose": "^5.9.6",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.474.0",
     "next": "15.0.3",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
